--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
   <groupId>ru.job4j</groupId>
   <artifactId>job4j_todo</artifactId>
   <version>1.0-SNAPSHOT</version>
+  <packaging>war</packaging>
 
   <name>job4j_todo</name>
   <url>http://localhost:8080</url>
@@ -34,9 +35,9 @@
       <version>1.7.30</version>
     </dependency>
     <dependency>
-      <groupId>jakarta.servlet</groupId>
-      <artifactId>jakarta.servlet-api</artifactId>
-      <version>5.0.0</version>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>4.0.1</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
@@ -48,6 +49,11 @@
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-core</artifactId>
       <version>5.4.30.Final</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.12.3</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
