--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,6 +8,10 @@
     </description>
 
     <servlet>
+        <servlet-name>IndexServlet</servlet-name>
+        <servlet-class>ru.job4j.servlet.IndexServlet</servlet-class>
+    </servlet>
+    <servlet>
         <servlet-name>TodoServlet</servlet-name>
         <servlet-class>ru.job4j.servlet.TodoServlet</servlet-class>
     </servlet>
@@ -19,7 +23,15 @@
         <servlet-name>RegServlet</servlet-name>
         <servlet-class>ru.job4j.servlet.RegServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>CategoryServlet</servlet-name>
+        <servlet-class>ru.job4j.servlet.CategoryServlet</servlet-class>
+    </servlet>
 
+    <servlet-mapping>
+        <servlet-name>IndexServlet</servlet-name>
+        <url-pattern>/index.do</url-pattern>
+    </servlet-mapping>
     <servlet-mapping>
         <servlet-name>TodoServlet</servlet-name>
         <url-pattern>/item.do</url-pattern>
@@ -32,15 +44,18 @@
         <servlet-name>RegServlet</servlet-name>
         <url-pattern>/reg.do</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>CategoryServlet</servlet-name>
+        <url-pattern>/categories.do</url-pattern>
+    </servlet-mapping>
 
     <filter>
         <filter-name>AuthFilter</filter-name>
         <filter-class>ru.job4j.filter.AuthFilter</filter-class>
     </filter>
-
     <filter-mapping>
         <filter-name>AuthFilter</filter-name>
-        <url-pattern>*</url-pattern>
+        <url-pattern>*.do</url-pattern>
     </filter-mapping>
 
     <session-config>
